@@ -1,3 +1,8 @@
+Wed Jan  5 11:58:51 2000  Gary Wong  <gary@cs.arizona.edu>
+
+	* ext.c: Use the public XGContextFromGC() rather than accessing
+	the private gc->gid.
+
 Wed Dec 15 15:19:42 NZDT 1999  Joern Thyssen  <joern@thyssen.nu>
 
         * configure.in, config.h.in: Add AC_CHECK_HEADERS(sys/time.h)
